fix(release): Replace invalid package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lsage/logger",
+  "name": "@ls-age/logger",
   "version": "0.1.0",
   "description": "Logging made easy",
   "main": "out/index.js",
