--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,10 +15,11 @@ test_script:
   - npm --version
 
   # Lint files
-  - node_modules/.bin/eslint -f junit src > $CIRCLE_TEST_REPORTS/eslint.xml
+  - node_modules/.bin/eslint -f junit src > eslint.xml
 
   # Run tests
-  - NODE_ENV=test node_modules/.bin/nyc npm test
+  - set NODE_ENV=TEST
+  - node_modules/.bin/nyc npm test
   - node_modules/.bin/nyc check-coverage --statements 90 --branches 90 --functions 90 --lines 90
 
 # Don't actually build.
