--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "babel-plugin-istanbul": "^4.0.0",
     "babel-preset-node6": "^11.0.0",
     "broken-link-checker-local": "^0.1.1",
+    "codecov": "^3.0.0",
     "esdoc": "^0.5.2",
     "esdoc-plugin-require-coverage": "^0.1.2",
     "eslint": "^3.17.1",
     "eslint-config-lsage": "^0.1.0",
     "mocha": "^3.2.0",
+    "mocha-circleci-reporter": "0.0.2",
     "nyc": "^10.1.2",
     "sinon": "^1.17.7",
     "unexpected": "^10.26.3"
