--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "compile": "babel src -d out",
     "compile:watch": "npm run compile -- --watch",
     "docs": "esdoc -c esdoc.json",
-    "lint": "eslint src",
+    "lint": "eslint src test",
     "prepublish": "npm run compile && npm run docs",
     "test": "mocha --recursive --require babel-register \"test/src/**/*.spec.js\"",
     "test:watch": "npm test -- --watch --reporter min",
