--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "compile:watch": "npm run compile -- --watch",
     "docs": "esdoc -c esdoc.json",
     "lint": "eslint src test",
-    "prepublish": "npm run compile && npm run docs",
+    "prepublishOnly": "npm run compile && npm run docs",
     "test": "mocha --recursive --require babel-register \"test/src/**/*.spec.js\"",
     "test:watch": "npm test -- --watch --reporter min",
     "test:coverage": "NODE_ENV=test nyc --reporter=html npm test",
