--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "homepage": "https://github.com/ls-age/logger#readme",
   "devDependencies": {
-    "@ls-age/bump-version": "0.1.0-beta.2",
+    "@ls-age/bump-version": "^0.1.1",
     "babel-cli": "^6.23.0",
     "babel-plugin-istanbul": "^4.0.0",
     "babel-preset-node6": "^11.0.0",
