--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "codecov": "^3.0.0",
     "esdoc": "^1.0.4",
     "esdoc-plugin-require-coverage": "^0.1.2",
+    "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^4.16.0",
     "eslint-config-lsage": "^0.3.0",
     "mocha": "^5.0.0",
